GNOME Bugzilla – Bug 722388
Setting wrap width on GtkTreeMenu makes it really slow
Last modified: 2018-05-02 15:54:36 UTC
It's ok if you set it after loading items. It manifested in a GtkComboBox. It's probably this, but I don't know GTK+ code well: https://git.gnome.org/browse/gtk+/tree/gtk/gtktreemenu.c?id=3.11.4#n1078
Created attachment 266554 [details] Test case showing the issue I can confirm this, any value of wrap-width > 0 (even 1) make populating the combo box terribly slow. Attached is a test case showing the problem, and on my machine it gives: n_items | wrap-width | time (ms) --------| -----------|---------- 100 | 0 | 10 100 | 1 | 710 100 | 2 | 729 100 | 3 | 750 100 | 4 | 765 ------------------------------- 200 | 0 | 27 200 | 1 | 2953 200 | 2 | 3096 200 | 3 | 3323 200 | 4 | 3561 This looks pretty damn slow for anything but wrap-width=0. Note that this slowness exists before the widget is shown, and even before it is added to its parent. Of course, a workaround is to only set the wrap-width after the combo has been filled, but: 1) one has to know this, and 2) it's not really convenient when e.g. a ComboBoxText is created with Glade and filled by the program.
We're moving to gitlab! As part of this move, we are moving bugs to NEEDINFO if they haven't seen activity in more than a year. If this issue is still important to you and still relevant with GTK+ 3.22 or master, please reopen it and we will migrate it to gitlab.
Still relevant as of 3.22. @Matthew, could you reopen?
@Colomban, I can't it will only let me make it "NEEDINFO" or "RESOLVED".
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gtk/issues/461.